kubernetes/apps/external-services/minafordon/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minafordon
  namespace: external-services
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8000
