kubernetes/apps/external-services/minafordon/app/httproute-local.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minafordon-local
  namespace: external-services
spec:
  parentRefs:
    - name: envoy-gateway-local
      namespace: network
      sectionName: https
  hostnames:
    - minafordon.egenintres.se
  rules:
    - name: default
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minafordon
          port: 8000
